--- a/recipes/templates/recipes/pages/category.html
+++ b/recipes/templates/recipes/pages/category.html
@@ -1,5 +1,7 @@
 {% extends 'global/base.html' %}
 
+{% block title %}Category | {% endblock title %}
+
 {% block content %}
     <div class="main-content main-content-list container">
         {% for recipe in recipes %}
@@ -7,6 +9,3 @@
         {% endfor %}
     </div>
 {% endblock content %}
-
-{% comment %} matricula ilike '202413430027'
-Adriana Maria da Silva Amaro (202413410033) {% endcomment %}
